Revision history for Perl extension WWW::GoKGS.

0.03 Jun 6th, 2014

  - improve documentation

  [BUGFIX]

    - Scraper::TournGames#scrape parses "Bye" properly
      ($bye->{type} was invalid)

0.02 Jun 5th, 2014

  - Add Scraper::GameArchives#result_filter
  - Add Scraper::TournGames#result_filter
  - Add GoKGS#result_filter

0.01 May 22nd, 2014

  - initial version