@@ -1,5 +1,16 @@
 Revision history for Perl extension WWW::GoKGS.
 
+   - Add Scraper#get_filter, #add_filter and #run_filter
+   - Scraper#scrape throws an exception if warnings are caught
+
+  [INCOMPATIBLE CHANGES]
+
+    - Remove GoKGS#result_filter
+    - Remove Scraper::GameArchives#date_filter and #result_filter
+    - Remove Scraper::TournGames#date_filter and #result_filter
+    - Remove Scraper::TournInfo#date_filter and #html_filter
+    - Remove Scraper::TournEntrants#date_filter
+
 0.03 Jun 6th, 2014
 
   - improve documentation
